# Mind-Daemon

./: .env.example  .gitignore  CLAUDE.md  CortexAPI_使用文档.md  LICENSE  claude_desktop_config.json  debug_coordinator.py  diagnose_connection.py  halo.py  llm_agent_demo.py  pyproject.toml  readme.md  ssh_test_report_20250727_013215.json  ssh_test_report_20250727_013437.json  test_agent_llm.py  test_bci_csv_storage.py  test_bci_module.py  test_cooldown_system.py  test_environment_cooldown.py  test_gesture_agent_integration.py  test_gesture_detection.py  test_gesture_integration.py  test_simple_halo.py  test_ssh_connection.py  test_ssh_detailed.py  test_ssh_quick.py  test_ssh_simple.py  test_websocket_gesture_params.py  websocket_monitor.py
Agent/: README.md
Detect/: README.md
MCP_for_Agent/: README.md
dashboard/: README.md  demo.html  index.html  script.js  style.css
data_process/: ENHANCED_README.md  MUSIC_FIX_SUMMARY.md  OPTIMIZATION_SUMMARY.md  README.md  cortex.py  demo.py  enhanced_socket_interface.py  env_state.py  environment_agent.py  llm_analyzer.py  main.py  minimax_agent.py  socket_interface.py  state_analyzer.py  sub_data.py  sub_data_store.py  window.py
docs/: Agent_API_Documentation.md  Analyse.md  Analyzers_API_Documentation.md  BCI_API_QUICK_REFERENCE.md  BCI_外设使用指南.md  INTERFACES_ANALYSIS_REPORT.md  WEBSOCKET_FRONTEND_INTEGRATION.md  intro.md
peripheral/: README.MD
src/mind_daemon/: __init__.py
tests/: test_bci_simple.py  test_dashboard.html  test_datastream.py  test_gesture_detection.py  test_system.py
utils/: README.md
(+39 files in other folders)
