[project]
name = "mind-daemon"
version = "0.1.0"
description = "BCI-powered focus and productivity system for ADHD patients"
readme = "README.md"
authors = [
    { name = "Aster", email = "aster@hdu.edu.cn" }
]
requires-python = ">=3.12"
dependencies = [
    "websocket-client",
    "python-dispatch",
    "matplotlib",
    "numpy>=2.3.1",
    "pandas>=2.3.1",
    "python-dispatch",
    "fastmcp",
    "openai",
    "pyqt6",
    "pyobjc-framework-cocoa>=11.1",
    "pyobjc-framework-quartz>=11.1",
    "python-dotenv>=1.1.1",
    "qasync>=0.27.1",
    "websockets>=12.0",
    "requests>=2.31.0",
    "psutil>=5.9.0",
]

[project.scripts]
mind-daemon = "mind_daemon:main"

[build-system]
requires = ["uv_build>=0.8.2,<0.9.0"]
build-backend = "uv_build"

[pip]
# 设置主要的索引源
index-url = "https://pypi.tuna.tsinghua.edu.cn/simple"
